tagged as "document" and visible by default. This avoids the application
of option "document_tags" to these commands.

* Isabelle names are mangled into LaTeX macro names to allow the full
identifier syntax with underscore, prime, digits. This is relevant for
antiquotations in control symbol notation, e.g. \<^const_name> becomes
\isactrlconstUNDERSCOREname.

* Document antiquotation @{session name} checks and prints the given
session name verbatim.

* Document preparation with skip_proofs option now preserves the content
more accurately: only terminal proof steps ('by' etc.) are skipped.

* Command-line tool "isabelle document" has been re-implemented in
Isabelle/Scala, with simplified arguments and explicit errors from the
latex and bibtex process. Minor INCOMPATIBILITY.


*** HOL ***

* A new command parametric_constant for proving parametricity of
  non-recursive definitions. For constants that are not fully parametric the
  command will infer conditions on relations (e.g., bi_unique, bi_total, or
  type class conditions such as "respects 0") sufficient for parametricity.
  See ~~/src/HOL/ex/Conditional_Parametricity_Examples for some examples.

* SMT module:
  - The 'smt_oracle' option is now necessary when using the 'smt' method
    with a solver other than Z3. INCOMPATIBILITY.
  - The encoding to first-order logic is now more complete in the
    presence of higher-order quantifiers. An 'smt_explicit_application'
    option has been added to control this. INCOMPATIBILITY.

* Theory HOL-Computational_Algebra.Polynomial_Factorial does not provide
instances of rat, real, complex as factorial rings etc. Import
HOL-Computational_Algebra.Field_as_Ring explicitly in case of need.
INCOMPATIBILITY.

* Fact mod_mult_self4 (on nat) renamed to mod_mult_self3', to avoid
clash with fact mod_mult_self4 (on more generic semirings).
INCOMPATIBILITY.

* Facts sum.commute(_restrict) and prod.commute(_restrict) renamed to